# daycrumbs

./: .gitignore  LICENSE  README.md  pyproject.toml  readme.md
src/daycrumbs/: cli.py  storage.py
src/worklog/: activity.py  cli.py  storage.py
tests/: test_activity.py  test_storage.py
