[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "worklog"
version = "0.1.0"
authors = [
    { name="Rajesh Dunga" },
]
description = "Opinionated worklog management tool for developers."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.26.8",
    "platformdirs>=4.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
]

[project.urls]
Homepage = "https://github.com"
